# HALLUCINATOR

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: fetch-vctk-model.yml  windows-build.yml
Resources/: MODEL_INTERFACE.md  dummy_rave_model.ts
Source/: LatentEngine.cpp  LatentEngine.h  Params.cpp  Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RaveModel.cpp  RaveModel.h  RingBuffer.h
Source/UI/: NeonLookAndFeel.h  NeonTheme.h
Source/Windows/: DelayLoadHook.cpp  PluginShim.cpp
tests/: offline_render_test.cpp
tools/: bundle_runtime_deps.sh  dump_model_interface.py  make_dummy_rave_model.cpp  render_editor_preview.cpp  setup_toolchain.sh  setup_toolchain_windows.ps1  sign_windows_adhoc.ps1  vst3_load_diagnostic.cpp
